--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "dep": "firebase deploy --only hosting:webrtc-benkmark"
+    "dep": "firebase deploy --only hosting"
   },
   "dependencies": {
     "@types/events": "^3.0.0",
